--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic HTML Elements Demo</title>
     <link rel="stylesheet" href="system9.css">
+    <script src="system9.js" defer></script>
 </head>
 <body>
 
@@ -42,7 +43,7 @@
 
         <!-- Section: Text Formatting -->
         <section id="text">
-            <h1>Text Formatting and Inline Elements</h1>
+                <h1>Text Formatting and Inline Elements</h1>
             <article>
                 <header>
                     <h2>Article Heading</h2>
@@ -69,7 +70,7 @@
 
         <!-- Section: Lists -->
         <section id="lists">
-            <h1>Lists</h1>
+                <h1>Lists</h1>
             
             <h2>Unordered List (Bullet Points)</h2>
             <ul>
@@ -101,7 +102,7 @@
 
         <!-- Section: Media and Figures -->
         <section id="media">
-            <h1>Media and Figures</h1>
+                <h1>Media and Figures</h1>
             <figure>
                 <img src="https://via.placeholder.com/300x150" alt="A placeholder image showing dimensions 300x150">
                 <figcaption>Fig. 1 - A placeholder image wrapped in a figure element.</figcaption>
@@ -121,7 +122,7 @@
 
         <!-- Section: Tables -->
         <section id="tables">
-            <h1>Tables</h1>
+                <h1>Tables</h1>
             <table>
                 <caption>Employee Data Table</caption>
                 <thead>
@@ -156,7 +157,7 @@
 
         <!-- Section: Forms -->
         <section id="forms">
-            <h1>Forms and Input Elements</h1>
+                <h1>Forms and Input Elements</h1>
             <form action="#" method="post">
                 <fieldset>
                     <legend>Personal Information</legend>
@@ -219,7 +220,7 @@
 
         <!-- Section: Interactive Elements -->
         <section id="interactive">
-            <h1>Interactive Elements</h1>
+                <h1>Interactive Elements</h1>
             
             <details>
                 <summary>Click to expand for more details</summary>
@@ -238,18 +239,5 @@
         </section>
 
     </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2026 Semantic HTML Demo. All rights reserved.</p>
-        <address>
-            Written by <a href="mailto:webmaster@example.com">Webmaster</a>.<br>
-            Visit us at:<br>
-            Example.com<br>
-            Box 564, Disneyland<br>
-            USA
-        </address>
-    </footer>
-
 </body>
 </html>
